# tmp-netusage-as

./: .env  README.md  config.py  get_data.py  init_db.py  pyproject.toml  requirements.txt  tmp.txt
app/: __init__.py  models.py
app/admin/: forms.py  routes.py
app/auth/: forms.py  routes.py
app/static/css/: style.css
app/templates/: base.html
app/templates/admin/: create_user.html  dashboard.html  edit_user.html  users.html
app/templates/auth/: login.html  register.html
app/templates/user/: dashboard.html  vpn.html
app/user/: routes.py
