[tool.poetry]
name = "netusage"
version = "0.1.0"
description = ""
authors = ["FranChesK0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
plotly = "^5.24.1"
werkzeug = "^3.1.3"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
